# nix-mox

./: .editorconfig  .gitignore  .tool-versions  .treefmt.toml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DRY_ANALYSIS.md  Makefile  PRODUCTION_READY.md  QUICK_START.md  README.md  SCRIPT_STATUS.md  TEMPLATE_UPDATE_PLAN.md  TODO.md  TROUBLESHOOTING.md  USAGE.md  USER_GUIDE.md  bootstrap-check.sh  codecov.yml  configuration.nix  default.nix  devenv.nix  env.example  flake-helpers.nix  flake.nix  home.nix  nix-mox-size-analysis-aarch64-darwin-20250623-155345.json  quick-commands.sh  result  test-kebab-function.nu  test_platform.nu  treefmt.nix
.githooks/: commit-msg  pre-commit
.github/: codecov.yml  dependabot.yml
Makefile.d/: analysis.mk  development.mk  maintenance.mk  testing.mk
config/: default.nix  hosts.nix  nix-mox.json
devshells/: default.nix
docs/: API.md  ARCHITECTURE.md  COMPLETIONS.md  CONTRIBUTING.md  COVERAGE.md  INSTALLER_IMPROVEMENTS.md  MIGRATION.md  MONITORING.md  MULTI_HOST.md  NUSHELL.md  PLATFORM-SPECIFIC.md  PLATFORM.md  QUICK_START.md  ROADMAP.md  SCRIPTS.md  SECURITY.md  SETUP_WIZARD.md  STORAGE_SAFETY.md  TEMPLATES.md  TROUBLESHOOTING.md  USAGE.md  VSCODE_EXTENSION.md  ZED_EXTENSION.md  function-naming-guide.md  nixos-on-proxmox.md  windows-automation-guide.md  windows-on-proxmox.md
extensions/zed/: Cargo.toml  README.md  build.sh  extension.json
extensions/zed/src/: commands.rs  language_server.rs  lib.rs  main.rs  snippets.rs  themes.rs
integration/: integration-tests.nu  performance-tests.nu
(+730 files in other folders)
