[package]
name = "nix-mox-zed"
version = "1.0.0"
edition = "2021"
description = "Enhanced Nushell development experience with nix-mox integration for Zed"
authors = ["Hydepwns <andrewtehsailor@gmail.com>"]
license = "MIT"
repository = "https://github.com/Hydepwns/nix-mox"
keywords = ["zed", "extension", "nushell", "nix", "nixos"]
categories = ["editor-extensions"]

[dependencies]
zed = "0.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "nix_mox_zed"
path = "src/lib.rs"

[[bin]]
name = "nix-mox-zed"
path = "src/main.rs"
